allow unsetting os_version for tests and use app os_version

--- a/server/html/partials/device-controls.html
+++ b/server/html/partials/device-controls.html
@@ -20,7 +20,7 @@
 <paper-fab mini title="Restart device" icon="refresh" class="secondary" onclick="reset_device();"></paper-fab>
 </div>
 {{#user}}
-{{> set-os-version-dialog ../device}}
+{{> set-os-version-dialog ..}}
 {{> set-location-dialog ../code}}
 {{/user}}
 
