--- a/server/html/partials/egg.html
+++ b/server/html/partials/egg.html
@@ -1,6 +1,4 @@
 <script src="/components/konami-js/konami.js"></script>
-<link href="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.min.css" type="text/css" rel="stylesheet" />
-<script src="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script>
   var easter_egg = new Konami();
   easter_egg.code = function() {
@@ -10,8 +8,18 @@
         return img.images.downsized_large.url;
       });
       var random_image = image_urls[Math.floor(Math.random() * image_urls.length)];
-      var $img = $('<img>').attr('src', random_image);
-      $.featherlight($img);
+      var $span = $('<span>').css({
+        position: 'absolute',
+        top: '25px',
+        left: '25px',
+        width: '50px',
+        height: '70px',
+        'background-size': 'cover',
+        'background-position': 'center center',
+        'background-image': 'url(' + random_image + ')',
+        'box-shadow': '0 0 4px #000 inset'
+      });
+      $('.illustration.ide').remove('.egg').append($span.addClass('egg'));
     });
   };
   easter_egg.load();
