--- a/server/html/partials/egg.html
+++ b/server/html/partials/egg.html
@@ -14,8 +14,10 @@
         left: '25px',
         width: '50px',
         height: '70px',
-        'background-size': 'cover',
+        'background-size': 'contain',
         'background-position': 'center center',
+        'background-color': '#000',
+        'background-repeat': 'no-repeat',
         'background-image': 'url(' + random_image + ')',
         'box-shadow': '0 0 4px #000 inset'
       });
