--- a/server/html/partials/test-report.html
+++ b/server/html/partials/test-report.html
@@ -46,6 +46,7 @@
       max-height: 300px;
       margin-top: 0.5em;
       border: none;
+      box-shadow: 0 0 8px rgba(0,0,0,0.25);
     }
 
     li.final-result {
