add Slack-Chat to / and /pricing

--- a/server/html/partials/material-design-lite.html
+++ b/server/html/partials/material-design-lite.html
@@ -11,6 +11,14 @@
     background-color: #4e265a;
   }
 
+  .brand-background-color {
+    background-color: #4e265a;
+  }
+
+  .brand-color {
+    color: #4e265a;
+  }
+
   .mdl-layout__content {
     background-color: #f7f7f7;
   }
