--- a/android/test/app/src/main/res/layout/text_fields.xml
+++ b/android/test/app/src/main/res/layout/text_fields.xml
@@ -22,10 +22,15 @@
         android:inputType="number"
         android:hint="1234"
         android:id="@+id/number" />
-    <EditText
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/passwordLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:id="@+id/password" />
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:id="@+id/password" />
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
