add VIM and Emacs keybinding options

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -8,6 +8,7 @@
 <link href="/components/iron-icons/av-icons.html" rel="import">
 <link href="/components/iron-icons/social-icons.html" rel="import">
 <link href="/components/iron-icons/communication-icons.html" rel="import">
+<link href="/components/iron-icons/hardware-icons.html" rel="import">
 <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
 <link href="/components/paper-dialog/paper-dialog.html" rel="import">
 <link href="/components/neon-animation/animations/fade-in-animation.html" rel="import">
