--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -23,9 +23,19 @@
       height: 24px;
       bottom: 0;
       transition: bottom .2s ease-out;
-      text-align: right;
       z-index: 5;
       box-shadow: 0 -5px 5px -5px rgba(0,0,0,0.5), 0 5px 5px -5px rgba(0,0,0,0.5);
+    }
+
+    #statusbar .keyboard-mode paper-icon-button {
+      opacity: 0.67;
+    }
+
+    #statusbar > *:last-child {
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
     }
 
     .show-repl #statusbar {
@@ -33,6 +43,7 @@
     }
 
     #statusbar paper-icon-button {
+      font-size: 12px;
       padding: 0;
       margin: 0 0.5em;
       color: rgba(255,255,255,0.67);
@@ -135,7 +146,10 @@
   {{> test-report}}
   {{#user}}
   <div id="statusbar">
-    <a href="javascript:toggle_repl();">
+    <a class="keyboard-mode" onclick="open_dialog('keyboard-mode');" title="Change keyboard mode">
+      <paper-icon-button icon="hardware:keyboard"></paper-icon-button>
+    </a>
+    <a class="repl" onclick="toggle_repl();">
       <paper-icon-button icon="code"></paper-icon-button>
     </a>
   </div>
@@ -284,6 +298,8 @@ window.addEventListener('message', function(event) {
     }
   </script>
 {{/unless}}
+
+{{> set-keyboard-mode-dialog user}}
 
 <!-- test runner -->
 <script src="/js/esprima.min.js" charset="utf-8"></script>
