added all_text() and all_types()

--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -235,7 +235,7 @@ window.addEventListener('message', function(event) {
     'activity', 'content_view', 'run_on_ui_thread', // Activity
     'tap', 'press', 'type_text', 'hide_keyboard', 'wait', 'screenshot', 'open_drawer', 'close_drawer', 'in_webview', // interaction
     'view', 'views', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', 'closest_to', 'furthest_from',  // selectors
-    'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'all_ids', // inspection
+    'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'all_ids', 'all_text', 'all_types', // inspection
     'assert_true', 'assert_false', 'assert_equal', 'assert_visible', // assertions
     'wait', 'wait_for', // wait
     'open_uri' // IPC
