--- a/server/html/partials/nav-public.html
+++ b/server/html/partials/nav-public.html
@@ -27,7 +27,7 @@
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#features">Features</a>
+      <a class="mdl-navigation__link" href="/#features">Features</a>
       <a class="mdl-navigation__link" href="/pricing">Pricing</a>
       <a class="mdl-navigation__link" href="/docs" target="_blank">API Documentation</a>
       <span class="mdl-navigation__link">
