"Get Started" -> "Sign in with GitHub"

--- a/server/html/partials/footer-public.html
+++ b/server/html/partials/footer-public.html
@@ -27,6 +27,9 @@
         <a href="/">Home</a>
       </li>
       <li>
+        <a href="/apps">My Apps</a>
+      </li>
+      <li>
         <a href="/pricing">Pricing</a>
       </li>
       <li>
