--- a/server/html/partials/nav-public.html
+++ b/server/html/partials/nav-public.html
@@ -31,7 +31,7 @@
       <a class="mdl-navigation__link" href="/pricing">Pricing</a>
       <a class="mdl-navigation__link" href="/docs" target="_blank">API Documentation</a>
       <span class="mdl-navigation__link">
-        {{> sign-in-button }}
+        {{> sign-in-button button_text="Sign in"}}
       </span>
     </nav>
   </div>
