--- a/android/test/app/src/main/res/layout/text_fields.xml
+++ b/android/test/app/src/main/res/layout/text_fields.xml
@@ -33,4 +33,17 @@
             android:hint="Password"
             android:id="@+id/password" />
     </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/popup_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Popup" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/popup_text"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
