--- a/server/html/partials/test-report.html
+++ b/server/html/partials/test-report.html
@@ -28,6 +28,10 @@
       color: rgba(0,0,0,0.87);
     }
 
+    li.result {
+      white-space: pre;
+    }
+
     li.result.none {
       display: none;
     }
