show username on app-settings page if display name not available

--- a/server/html/partials/account-button.html
+++ b/server/html/partials/account-button.html
@@ -1,7 +1,7 @@
 <a class="account" href="/account/{{id}}" alt="{{displayName}}" style="margin: 0 0.33em; {{#show_name}}vertical-align: bottom; line-height: 1.5em;{{/show_name}}">
   <img src="{{avatarUrl}}" class="user-avatar" {{#show_name}}style="width: 1.5em; height: 1.5em; border-radius: 0.75em; margin-right: 0.5em; vertical-align: bottom;"{{/show_name}} />
   {{#if show_name}}
-    {{displayName}}
+    {{#displayName}}{{.}}{{else}}{{username}}{{/displayName}}
     {{#admin}}
       <span class="is-admin" style="opacity: 0.5;">(admin)</span>
     {{/admin}}
